--- a/misperris/core/templates/core/registrar.html
+++ b/misperris/core/templates/core/registrar.html
@@ -2,7 +2,6 @@
 {% load static %}
 
 {% block contenedor %}
-{% load static %}
     <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -27,7 +26,7 @@
 
     <br>
     <br>
-    <div id="contenedor5">{{MEDIA_URL}}
+    <div id="contenedor5">
         <div id="caja1">
             <img src="{% static 'core/img/perro (1).png'%}" class="perro">
         </div>
